--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
     <title>Fazlur Rahman - Software Developer</title>
-    <link rel="icon" href="Icon/user.png">
+    <link rel="icon" href="Icon/user.png" />
   </head>
   <body>
-    
     <!-- Header -->
     <header>
       <div class="navbar">
@@ -112,11 +111,12 @@
             <div class="portfolio-cover">
               <img src="Image/login page.png" alt="Portfolio 1" />
             </div>
+
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Login Website</h4>
                 <a href="pdf/Login.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -141,7 +141,7 @@
               <div class="portfolio-title">
                 <h4>Music Website</h4>
                 <a href="pdf/music.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -167,7 +167,7 @@
               <div class="portfolio-title">
                 <h4>Calculator</h4>
                 <a href="pdf/calculator.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -192,7 +192,7 @@
               <div class="portfolio-title">
                 <h4>Bento UI Design</h4>
                 <a href="pdf/Photo1.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -216,7 +216,7 @@
               <div class="portfolio-title">
                 <h4>Logo Education</h4>
                 <a href="pdf/EDU-FUSION.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -225,8 +225,8 @@
                 <div>Create : 30/11/24</div>
               </div>
               <p>
-                Logo ini menampilkan sebuah buku berwarna pirus dengan likaran kuning di sampulnya, serta pensil berwarna pirus dengan penghapus oranye di sebelahnya. Di bawah elemen-elemen tersebut, terdapat teks "EDU FUSION" yang
-                ditulis dalam huruf kapital berwarna pirus. Logo ini relevan dan menarik karena secara visual mewakili alat pendidikan (buku dan pensil), dan menunjukkan fokus pada pendidikan atau pembelajaran, yang diperkuat oleh
+                Logo ini menampilkan sebuah buku berwarna pirus dengan likaran kuning di sampulnya, serta pensil berwarna pirus dengan penghapus oranye di sebelahnya. Di bawah elemen-elemen tersebut, terdapat teks "EDU FUSION" yang ditulis
+                dalam huruf kapital berwarna pirus. Logo ini relevan dan menarik karena secara visual mewakili alat pendidikan (buku dan pensil), dan menunjukkan fokus pada pendidikan atau pembelajaran, yang diperkuat oleh
                 nama "EDU FUSION."
               </p>
             </div>
@@ -241,7 +241,7 @@
               <div class="portfolio-title">
                 <h4>Logo Cafe</h4>
                 <a href="pdf/Cafe-Bliss.pdf" target="_blank" class="portfolio-link">
-                  <img style="width: 24px" src="Icon/zoom.png" alt="" />
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
               <div class="portfolio-tags">
@@ -294,7 +294,7 @@
                 <div></div>
               </div>
               <div class="education-info">
-                <h4 class="education-title"> - </h4>
+                <h4 class="education-title">-</h4>
                 <p>-</p>
                 <h4 class="education-years">-</h4>
               </div>
