--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <nav>
             <ul>
-              <li><a style="display: none" href="#">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolios">Portfolio</a></li>
               <li><a href="#skills">Skills</a></li>
@@ -106,7 +106,7 @@
         <h1 class="section-title">Featured Portfolios</h1>
 
         <div class="grid-3">
-          <!-- Portfolio 1 -->
+          <!-- Portfolio 1 WEB DEVELOPER -->
           <div class="portfolio">
             <div class="portfolio-cover">
               <img src="Image/login page.png" alt="Portfolio 1" />
@@ -183,7 +183,7 @@
             </div>
           </div>
 
-          <!-- Portfolio 4 -->
+          <!-- Portfolio 1 UI DESIGN -->
           <div class="portfolio">
             <div class="portfolio-cover">
               <img src="Image/Photo1.png" alt="Portfolio 4" />
@@ -191,7 +191,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Bento UI Design</h4>
-                <a href="pdf/Photo1.pdf" target="_blank" class="portfolio-link">
+                <a href="pdf/Bento UI.pdf" target="_blank" class="portfolio-link">
                   <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
@@ -207,7 +207,7 @@
             </div>
           </div>
 
-          <!-- Portfolio 5 -->
+          <!-- Portfolio 1 GRAPHIC DESIGN -->
           <div class="portfolio">
             <div class="portfolio-cover">
               <img src="Inkscape/EDU FUSION.png" alt="Portfolio 4" />
@@ -232,7 +232,7 @@
             </div>
           </div>
 
-          <!-- Portfolio 6 -->
+          <!-- Portfolio 2 -->
           <div class="portfolio">
             <div class="portfolio-cover">
               <img src="Inkscape/Cafe Bliss.png" alt="Portfolio 4" />
@@ -256,7 +256,76 @@
               </p>
             </div>
           </div>
-        </div>
+
+          <!-- Porfolio 3 -->
+          <div class="portfolio">
+            <div class="portfolio-cover">
+              <img src="Inkscape/INNO CREATIVE.png" alt="Portfolio 4" />
+            </div>
+            <div class="portfolio-info">
+              <div class="portfolio-title">
+                <h4>Logo Creativity</h4>
+                <a href="pdf/INNO-CREATIVE.pdf" target="_blank" class="portfolio-link">
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
+                </a>
+              </div>
+              <div class="portfolio-tags">
+                <img style="width: 24px" src="Icon/palette.png" alt="" />
+                <div>Desain Grafis</div>
+                <div>Create : 30/11/24</div>
+              </div>
+              <p>
+                Ini merupakan logo untuk komunitas atau perusahaan Kreativitas dalam berbagai bidang seperti Teknologi, Artistik, Bisnis dll, arti bentuk bintang tersebut adalah Bintang laut sering kali melambangkan kreativitas, inovasi, dan keluwesan. Pilihan bentuk ini mungkin mencerminkan nilai-nilai atau fokus dari perusahaan atau organisasi yang diwakili oleh logo ini, sedangkan lingkaran kuning memiliki arti melambangkan optimisme, kebahagiaan, dan energi positif. Lingkaran juga bisa diartikan sebagai simbol kebulatan, keterpaduan, atau komunitas. Untuk namanya INNO: merupakan singkatan dari "innovation" (inovasi), menekankan fokus pada ide-ide baru dan kreatif, CREATIVES: Menunjukkan bahwa perusahaan bergerak di bidang kreatif atau inovatif, seperti desain, seni, atau teknologi kreatif.
+              </p>
+            </div>
+          </div>
+
+
+          <!-- Portfolio 4 -->
+          <div class="portfolio">
+            <div class="portfolio-cover">
+              <img src="Inkscape/Well Heart.png" alt="Portfolio 4" />
+            </div>
+            <div class="portfolio-info">
+              <div class="portfolio-title">
+                <h4>Logo Health</h4>
+                <a href="pdf/Well-Heart.pdf" target="_blank" class="portfolio-link">
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
+                </a>
+              </div>
+              <div class="portfolio-tags">
+                <img style="width: 24px" src="Icon/palette.png" alt="" />
+                <div>Desain Grafis</div>
+                <div>Create : 1/12/24</div>
+              </div>
+              <p>
+                Logo ini mewakili merek yang berfokus pada perusahaan Kesehatan, menekankan menjaga kesehatan fisik dan rohani. Arti Hati adalah kesehatan jantung dengan warna Merah melambangkan darah, energi dan kehidupan, makna daun dibelakangnya yaitu alami yang berarti pengobatan alami dan holistik dan makna lingkaran yaitu melambangkan keseimbangan dan keutuhan.
+              </p>
+            </div>
+         </div>
+         
+         <!-- Portfolio 5 -->
+         <div class="portfolio">
+          <div class="portfolio-cover">
+            <img src="Inkscape/GreenTech.png" alt="Portfolio 4" />
+          </div>
+          <div class="portfolio-info">
+            <div class="portfolio-title">
+              <h4>Logo Plant</h4>
+              <a href="pdf/GreenTech.pdf" target="_blank" class="portfolio-link">
+                <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
+              </a>
+            </div>
+            <div class="portfolio-tags">
+              <img style="width: 24px" src="Icon/palette.png" alt="" />
+              <div>Desain Grafis</div>
+              <div>Create : 1/12/24</div>
+            </div>
+            <p>
+              Logo tersebut adalah sebuah lingkaran berwarna hijau dengan gambar daun di tengahnya. Daun tersebut terdiri dari tiga bagian: satu daun utama di tengah yang lebih terang dan dua daun di samping yang lebih gelap. Desain ini memberikan kesan kesegaran, pertumbuhan, dan keberlanjutan, yang sering dikaitkan dengan alam dan lingkungan. Logo ini mungkin digunakan oleh organisasi atau perusahaan yang bergerak di bidang lingkungan, pertanian, atau produk-produk ramah lingkungan.
+            </p>
+          </div>
+       </div>
       </div>
     </section>
     <!-- End Portfolios -->
@@ -302,7 +371,7 @@
           </div>
 
           <div class="skills-right">
-            <p>For over 3 years, I have been continuously learning in the field of front-end and experimenting with new technologies and frameworks, and here you can see a summary of my skills.*</p>
+            <p>For over 3 years, I have been continuously learning in the field of front-end and experimenting with new technologies and frameworks, and here you can see a summary of my skills.</p>
 
             <div class="skills-list">
               <ul>
