--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
     <title>Fazlur Rahman - Software Developer</title>
-    <link rel="icon" href="Icon/user.png" />
+    <link rel="icon" href="office_worker_typing-removebg-preview.png" />
   </head>
   <body>
     <!-- Header -->
@@ -201,8 +201,30 @@
                 <div>Create : 06/11/24</div>
               </div>
               <p>
-                Desain antarmuka pengguna (UI) ini menampilkan konsep mobil "Lamborghini Vermelho," sebuah mobil sport futuristik dengan desain agresif dan estetika khas Lamborghini. Teks "LAMBORGHINI VERMELHO" menyoroti nama mobil,
+                Desain antarmuka pengguna (UI) dengan ukuran 1920:1080 ini menampilkan konsep mobil "Lamborghini Vermelho," sebuah mobil sport futuristik dengan desain agresif dan estetika khas Lamborghini. Teks "LAMBORGHINI VERMELHO" menyoroti nama mobil,
                 sementara logo dan deskripsi di sekitar gambar menambah detail yang menarik tentang performa dan gaya eksklusif mobil ini.
+              </p>
+            </div>
+          </div>
+
+          <div class="portfolio">
+            <div class="portfolio-cover">
+              <img src="Image/HARI PAHLAWAN.png" alt="Portfolio 4" />
+            </div>
+            <div class="portfolio-info">
+              <div class="portfolio-title">
+                <h4>Hari Pahlawan UI Design</h4>
+                <a href="pdf/Bento UI.pdf" target="_blank" class="portfolio-link">
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
+                </a>
+              </div>
+              <div class="portfolio-tags">
+                <img style="width: 24px" src="Icon/customize-computer.png" alt="" />
+                <div>UI/UX Design</div>
+                <div>Create : 09/11/24</div>
+              </div>
+              <p>
+               - - -
               </p>
             </div>
           </div>
