--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Hari Pahlawan UI Design</h4>
-                <a href="pdf/Bento UI.pdf" target="_blank" class="portfolio-link">
+                <a href="pdf/HARI-PAHLAWAN.pdf" target="_blank" class="portfolio-link">
                   <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
@@ -224,7 +224,7 @@
                 <div>Create : 09/11/24</div>
               </div>
               <p>
-               - - -
+                UI/UX Desain ini memperingati Hari Pahlawan pada 10 November 2024 dengan tajuk utama "SELAMAT HARI PAHLAWAN." Selain memberikan ucapan peringatan, poster ini menampilkan kategori informasi seperti "SEJARAH," "SOROTAN," dan "INFO" untuk akses lebih lanjut. Kutipan Soekarno yang berbunyi "Bangsa yang besar adalah bangsa yang menghormati jasa pahlawannya" memperkuat pesan utama. Poster ini juga dilengkapi dengan tombol interaktif "UNDUH," "BAGIKAN," dan "SUKA," yang memungkinkan dapat berinteraksi dengan pengguna.
               </p>
             </div>
           </div>
