--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Login Website</h4>
-                <a href="pdf/Login.pdf" target="_blank" class="portfolio-link">
+                <a href="pdf/login-page.pdf" target="_blank" class="portfolio-link">
                   <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
@@ -140,7 +140,7 @@
             <div class="portfolio-info">
               <div class="portfolio-title">
                 <h4>Music Website</h4>
-                <a href="pdf/music.pdf" target="_blank" class="portfolio-link">
+                <a href="pdf/music-page.pdf" target="_blank" class="portfolio-link">
                   <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
                 </a>
               </div>
