--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="line-2"></div>
             <div class="line-3"></div>
           </div>
+          
         </div>
       </div>
       <div class="main-container">
@@ -375,9 +376,9 @@
                 <div></div>
               </div>
               <div class="education-info">
-                <h4 class="education-title">Unlimited Imagination Community</h4>
+                <h4 class="education-title">Ruang Edit Community</h4>
                 <p>Desain Grafis</p>
-                <h4 class="education-years">2024 - sekarang</h4>
+                <h4 class="education-years">2025 - sekarang</h4>
               </div>
             </div>
             <div class="education">
@@ -385,9 +386,9 @@
                 <div></div>
               </div>
               <div class="education-info">
-                <h4 class="education-title">-</h4>
-                <p>-</p>
-                <h4 class="education-years">-</h4>
+                <h4 class="education-title">Ruang Inspirasi Desain Community</h4>
+                <p>Desain Grafis</p>
+                <h4 class="education-years">2025 - sekarang</h4>
               </div>
             </div>
           </div>
@@ -395,7 +396,7 @@
           <div class="skills-right">
             <p>For over 3 years, I have been continuously learning in the field of front-end and experimenting with new technologies and frameworks, and here you can see a summary of my skills.</p>
 
-            <div class="skills-list">
+            <div class="skills-list"> 
               <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -495,7 +496,7 @@
           <img src="Icon/facebook.png" alt="" />
         </a>
       </div>
-      <p>&copy; 2024 Fazlur Rahman. All rights reversed.</p>
+      <p>&copy; 2024-2030 Fazlur Rahman. All rights reversed.</p>
     </footer>
     <!-- End Footer -->
 
