--- a/index.html
+++ b/index.html
@@ -208,6 +208,28 @@
             </div>
           </div>
 
+            <div class="portfolio">
+            <div class="portfolio-cover">
+              <img src="Image/Laptop design ui.jpg" alt="Portfolio 4" />
+            </div>
+            <div class="portfolio-info">
+              <div class="portfolio-title">
+                <h4>Landing Page Laptop UI</h4>
+                <a href="pdf/Laptop-design-ui.pdf" target="_blank" class="portfolio-link">
+                  <img style="width: 24px" src="Icon/file-pdf.png" alt="" />
+                </a>
+              </div>
+              <div class="portfolio-tags">
+                <img style="width: 24px" src="Icon/customize-computer.png" alt="" />
+                <div>UI/UX Design</div>
+                <div>Create : 18/01/25</div>
+              </div>
+              <p>
+               Desain UI ini memukau dengan tampilan beranda yang kuat, menampilkan gambar produk yang besar dan jelas, pesan singkat yang informatif, dan tombol ajakan yang menarik. Navigasi yang mudah melalui menu bar sederhana dan ikon pencarian membantu pengunjung menjelajahi situs web dengan lancar. Tata letak berbasis grid yang teratur dan spasi yang cukup menciptakan tampilan yang bersih dan profesional. Elemen visual yang menarik, seperti warna kontras khas ROG, font yang jelas, dan gambar berkualitas tinggi, menambah daya tarik visual. Sentuhan tambahan seperti logo ROG dan informasi tentang pemilik dan perancang desain memberikan sentuhan personal. Secara keseluruhan, desain UI ini выполнен dengan baik, menggabungkan estetika yang menarik dengan fungsionalitas yang mudah digunakan, menciptakan pengalaman pengguna yang positif.
+              </p>
+            </div>
+          </div>
+
           <div class="portfolio">
             <div class="portfolio-cover">
               <img src="Image/HARI PAHLAWAN.png" alt="Portfolio 4" />
