--- a/index.html
+++ b/index.html
@@ -423,14 +423,12 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>React JS</li>
                 <li>Bootstrap</li>
               </ul>
 
               <ul>
                 <li>Figma</li>
-                <li>Photoshop</li>
-                <li>Illustrator</li>
+                <li>GIMP</li>
                 <li>Inkscape</li>
               </ul>
             </div>
