--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/responsive.css" />
     <title>Fazlur Rahman - Software Developer</title>
     <link rel="icon" href="office_worker_typing-removebg-preview.png" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
@@ -56,7 +57,7 @@
 
     <!-- Services -->
     <section id="services">
-      <div class="services main-container">
+      <div class="services main-container" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <h3 class="pre-title">Services</h3>
         <h1 class="section-title services-title">Specialized In</h1>
 
@@ -73,7 +74,7 @@
             </p>
           </div>
 
-          <div class="service">
+          <div class="service" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
             <div class="service-icon">
               <img src="Icon/globe.png" alt="" />
             </div>
@@ -84,7 +85,7 @@
             </p>
           </div>
 
-          <div class="service">
+          <div class="service" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
             <div class="service-icon">
               <img src="Icon/palette.png" alt="" />
             </div>
@@ -102,13 +103,13 @@
 
     <!-- Portfolios -->
     <section id="portfolios">
-      <div class="portfolios main-container">
+      <div class="portfolios main-container" data-aos="fade-up">
         <h3 class="pre-title">My Works</h3>
         <h1 class="section-title">Featured Portfolios</h1>
 
         <div class="grid-3">
           <!-- Portfolio 1 WEB DEVELOPER -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/login page.png" alt="Portfolio 1" />
             </div>
@@ -134,7 +135,7 @@
           </div>
 
           <!-- Portfolio 2 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/music page.png" alt="Portfolio 1" />
             </div>
@@ -160,7 +161,7 @@
           </div>
 
           <!-- Portfolio 3 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/calculator.png" alt="Portfolio 3" />
             </div>
@@ -185,7 +186,7 @@
           </div>
 
           <!-- Portfolio 1 UI DESIGN -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/Photo1.png" alt="Portfolio 4" />
             </div>
@@ -208,7 +209,7 @@
             </div>
           </div>
 
-            <div class="portfolio">
+            <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/Laptop design ui.jpg" alt="Portfolio 4" />
             </div>
@@ -230,7 +231,7 @@
             </div>
           </div>
 
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Image/HARI PAHLAWAN.png" alt="Portfolio 4" />
             </div>
@@ -253,7 +254,7 @@
           </div>
 
           <!-- Portfolio 1 GRAPHIC DESIGN -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Inkscape/EDU FUSION.png" alt="Portfolio 4" />
             </div>
@@ -278,7 +279,7 @@
           </div>
 
           <!-- Portfolio 2 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Inkscape/Cafe Bliss.png" alt="Portfolio 4" />
             </div>
@@ -303,7 +304,7 @@
           </div>
 
           <!-- Porfolio 3 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Inkscape/INNO CREATIVE.png" alt="Portfolio 4" />
             </div>
@@ -327,7 +328,7 @@
 
 
           <!-- Portfolio 4 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="fade-up">
             <div class="portfolio-cover">
               <img src="Inkscape/Well Heart.png" alt="Portfolio 4" />
             </div>
@@ -350,7 +351,7 @@
          </div>
          
          <!-- Portfolio 5 -->
-         <div class="portfolio">
+         <div class="portfolio" data-aos="fade-up">
           <div class="portfolio-cover">
             <img src="Inkscape/GreenTech.png" alt="Portfolio 4" />
           </div>
@@ -377,7 +378,7 @@
 
     <!-- Skills & Education -->
     <section id="skills">
-      <div class="skills main-container">
+      <div class="skills main-container" data-aos="fade-right">
         <h3 class="pre-title">Learning Path</h3>
         <h1 class="section-title">Skills & Education</h1>
 
@@ -415,7 +416,7 @@
             </div>
           </div>
 
-          <div class="skills-right">
+          <div class="skills-right" data-aos="fade-left">
             <p>For over 3 years, I have been continuously learning in the field of front-end and experimenting with new technologies and frameworks, and here you can see a summary of my skills.</p>
 
             <div class="skills-list"> 
@@ -440,7 +441,8 @@
 
     <!-- Contact -->
     <section id="contact">
-      <div class="contact main-container">
+      <div class="contact main-container" data-aos="fade-up"
+     data-aos-duration="3000">
         <div class="contact-left">
           <form action="https://formspree.io/f/xgvebqpa" method="POST" class="contact-form">
             <div>
@@ -458,7 +460,8 @@
           </form>
         </div>
 
-        <div class="contact-right">
+        <div class="contact-right" data-aos="fade-up"
+     data-aos-duration="3000">
           <div class="contact-item">
             <div class="contact-item-icon">
               <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
@@ -521,5 +524,9 @@
     <!-- End Footer -->
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+  AOS.init();
+</script>
   </body>
 </html>
